# toocal

./: .clang-format  .editorconfig  .gitignore  .ocamlformat  .scalafmt.conf  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README  README.md  Toocal.sln  build.sbt  dune-project  makefile  toocal.opam  toocal.sln  wiscodb.opam  xmake.lua
.github/workflows/: Linux.yml  (+3 more)
Toocal/: DataAccessLayer.fs  Errors.fs  Freelist.fs  Function.fs  Logging.fs  Meta.fs  Node.fs  Page.fs  Serializable.fs  Serializer.fs  Toocal.fsproj
Toocal.Cli/: Toocal.Cli.fsproj
Toocal.Core/: DataAccessLayer.fs  FreeList.fs  Helper.fs  Library.fs  Meta.fs  Node.fs  Page.fs  Toocal.Core.fsproj
Toocal.Program/: Toocal.Program.fsproj
Toocal.Tests/: DataAccessLayer.fs  FreeList.fs  Meta.fs  Node.fs  Program.fs  Toocal.Tests.fsproj  UnitTest1.fs
cli/: main.cpp
core/: collection.cpp  collection.h  data_access_layer.cpp  data_access_layer.h  errors.hpp  freelist.cpp  freelist.h  main.cpp  meta.h  node.cpp  node.h  page.cpp  page.h  types.hpp  utils.cpp  utils.h
lib/: dune  memtbl.ml  memtbl.mli  sstable.mli  utils.ml  vlog.ml  vlog.mli
libs/: xmake.lua
src/: data_access_layer.rs  free_list.rs  main.cpp  main.rs  meta.rs  node.rs  options.rs  page.rs  utils.rs
test/: dune  test_memtbl.ml  test_toocal.ml  test_wiscodb.ml
tests/: test_balance_insert.cpp  test_balance_query.cpp  test_balance_remove.cpp  test_best_file_size_remove.cpp  test_best_filesize_insert.cpp  test_best_filesize_query.cpp  test_best_performance_insert.cpp  test_best_performance_query.cpp  test_best_performance_remove.cpp
(+52 files in other folders)
